# glace

./: Cargo.toml  DEV.md  README.md
.github/workflows/: rust.yml
assist/: Cargo.toml
assist/src/: cache.rs  lib.rs  load.rs
assist_macros/: Cargo.toml
assist_macros/src/: lib.rs
assist_proc_macro/: Cargo.toml
assist_proc_macro/src/: lib.rs
glace/: Cargo.toml
glace/example_docs/: Cargo.toml
glace/example_docs/example_assets/text/: other_note.txt
glace/example_docs/src/: lib.rs
glace/glace/: Cargo.toml
glace/glace/src/: _example_docs.rs  _internal.rs  cache.rs  lib.rs
glace/glace/src/_internal/: load.rs
glace/glace_macros/: Cargo.toml
glace/glace_macros/src/: codegen.rs  compat_tests.rs  config.rs  lib.rs  parsing.rs
glace/src/: _internal.rs  lib.rs
glace/src/_internal/: load.rs
glace/testcrate/: Cargo.toml
glace/testcrate/assets/: autoitems.yaml
glace/testcrate/assets/languages/it/: credits.txt
glace/testcrate/assets/profiles/: release.toml
glace/testcrate/assets/text/notes/: _another_secret_note.txt  note2.txt
glace/testcrate/src/: lib.rs
glace_macros/: Cargo.toml
glace_macros/src/: codegen.rs  lib.rs  parsing.rs
scripts/: check  citest  expand  featuretest  fmtlint  gen_docs  reformat  test
src/: cache.rs  lib.rs
test_suite/data/ignored_dir/: file_in_ignored_dir.txt
test_suite/data/json/: file_a.json  file_b.json  single_json.json  virtual_json.json
test_suite/data/text/: file_b.txt
test_suite/data/text/nested_text/: nested_a.txt  nested_b.txt
test_suite/data/toml/: file_a.toml  file_b.toml  single_toml.toml  virtual_toml.toml
test_suite/data/yaml/: file_a.yaml  file_b.yaml  single_yaml.yaml  virtual_yaml.yaml
test_suite/full/: Cargo.toml
test_suite/full/src/: lib.rs
test_suite/helper_macros/: Cargo.toml
test_suite/helper_macros/src/: lib.rs
test_suite/no_default_features/: Cargo.toml
test_suite/test_full/: Cargo.toml
test_suite/test_full/src/: lib.rs
test_suite/test_no_default_features/: Cargo.toml
test_suite/test_no_default_features/src/: lib.rs
testcrate/: Cargo.toml
testcrate/assets/: autoconfig.toml
testcrate/assets/autoprofiles/: dev.toml
testcrate/assets/languages/en/: credits.txt  description.txt
testcrate/assets/languages/it/: description.txt
testcrate/assets/text/json/: Second JSON file.json
testcrate/src/: lib.rs
