[package]
name = "assist"
version = "0.1.0"
edition = "2021"

[features]
default = ["self_cached", "image", "serde_json", "serde_toml", "serde_yaml"]

image = ["dep:image", "assist_macros/image"]

serde = ["dep:serde"]
serde_json = ["serde", "dep:serde_json", "assist_macros/serde_json"]
serde_toml = ["serde", "dep:toml", "assist_macros/serde_toml"]
serde_yaml = ["serde", "dep:serde_yaml", "assist_macros/serde_yaml"]

self_cached = ["assist_macros/self_cached"]
disable_const_data = ["assist_macros/disable_const_data"]
disable_disk_io = ["assist_macros/disable_disk_io"]

visit_includes_skipped = []

[dependencies]
assist_macros = { path = "../assist_macros" }
ignore = "0.4"
indexmap = { version = "1.9", features = ["serde"] }
image = { version = "0.24", optional = true }
lazy_static = "1.0"
parking_lot = "0.12"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true, features = ["preserve_order", "raw_value"] }
serde_yaml = { version = "0.9", optional = true }
thiserror = "1.0"
toml = { version = "0.5", optional = true, features = ["preserve_order"] }
