[package]
name = "assist_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[features]
image = ["dep:image"]
self_cached = []
serde_json = ["dep:serde_json"]
serde_toml = ["dep:toml"]
serde_yaml = ["dep:serde_yaml"]

disable_const_data = []
disable_disk_io = []

[dependencies]
convert_case = "0.6"
ignore = "0.4"
image = { version = "0.24", optional = true }
indexmap = { version = "1.9", features = ["serde"] }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
serde_json = { version = "1.0", features = ["preserve_order", "raw_value"], optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.5", optional = true, features = ["preserve_order"] }
color-eyre = "0.6"

