[package]
name = "glace"
version = "0.1.0"
edition = "2021"
authors = ["Vi <violet@hey.com>"]
description = "A type-safe, user-friendly proc macro for embedding a file tree into your code."
homepage = "https://github.com/mistodon/glace"
repository = "https://github.com/mistodon/glace"
readme = "../README.md"
keywords = ["macro", "gamedev", "serde", "file", "assets"]
categories = ["caching", "data-structures", "development-tools", "filesystem", "game-development"]
license = "CC0-1.0"

[features]
default = ["full"]

basic = ["const_data", "disk_io"]
basic_cached = ["basic", "self_cached"]
basic_serde = ["basic", "serde_json", "serde_toml", "serde_yaml"]
serde_cached = ["basic_serde", "self_cached"]
basic_edres = ["basic", "edres_json", "edres_toml", "edres_yaml"]
edres_cached = ["basic_edres", "self_cached"]
full = ["basic_cached", "edres_json", "edres_toml", "edres_yaml", "image"]

const_data = ["glace_macros/const_data"]
disk_io = ["glace_macros/disk_io"]
self_cached = ["glace_macros/self_cached"]

image = ["dep:image", "glace_macros/image"]

serde = ["dep:serde", "glace_macros/serde"]
serde_json = ["serde", "dep:serde_json", "glace_macros/serde_json"]
serde_toml = ["serde", "dep:toml", "glace_macros/serde_toml"]
serde_yaml = ["serde", "dep:serde_yaml", "glace_macros/serde_yaml"]

edres_json = ["serde_json", "glace_macros/edres_json"]
edres_toml = ["serde_toml", "glace_macros/edres_toml"]
edres_yaml = ["serde_yaml", "glace_macros/edres_yaml"]

visit_includes_skipped = []

[dependencies]
glace_macros = { version = "=0.1.0", path = "../glace_macros" }
ignore = "0.4"
indexmap = { version = "1.9", features = ["serde"] }
image = { version = "0.24", optional = true }
lazy_static = "1.0"
parking_lot = "0.12"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true, features = ["preserve_order", "raw_value"] }
serde_yaml = { version = "0.9", optional = true }
thiserror = "1.0"
toml = { version = "0.5", optional = true, features = ["preserve_order"] }
