[package]
name = "glace_macros"
version = "0.3.0"
edition = "2024"
authors = ["Vi <violet@hey.com>"]
description = "Internals for the glace crate."
homepage = "https://github.com/mistodon/glace"
repository = "https://github.com/mistodon/glace"
readme = "../README.md"
license = "CC0-1.0"

[lib]
proc-macro = true

[features]
self_cached = []
const_data = []
disk_io = []

image = ["dep:image"]

serde = []
serde_json = ["serde", "dep:serde_json"]
serde_toml = ["serde", "dep:toml"]
serde_yaml = ["serde", "dep:serde_yaml"]

edres = ["dep:edres"]
edres_json = ["edres", "edres/json", "serde_json"]
edres_toml = ["edres", "edres/toml", "serde_toml"]
edres_yaml = ["edres", "edres/yaml", "serde_yaml"]

example_docs = []

[dependencies]
convert_case = "0.6"
edres = { version = "0.6", default-features = false, optional = true }
ignore = "0.4"
image = { version = "0.24", optional = true }
indexmap = { version = "1.9", features = ["serde"] }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
serde_json = { version = "1.0", features = ["preserve_order", "raw_value"], optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.5", optional = true, features = ["preserve_order"] }
color-eyre = "0.6"

