[package]
name = "full"
version = "0.1.0"
edition = "2024"

[dependencies]
glace = { path = "../../glace/glace", default-features = false, features = [ "full", "visit_includes_skipped" ] }
helper_macros = { path = "../helper_macros" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
